RESOLVED FIXED94053
JSDOMWrapper should ASSERT that it has an associated ScriptExecutionContext
https://bugs.webkit.org/show_bug.cgi?id=94053
Summary JSDOMWrapper should ASSERT that it has an associated ScriptExecutionContext
Adam Barth
Reported 2012-08-14 17:49:37 PDT
JSDOMWrapper should ASSERT that it has an associated ScriptExecutionContext
Attachments
Need to run tests (2.64 KB, patch)
2012-08-14 17:51 PDT, Adam Barth
no flags
Patch (2.64 KB, patch)
2012-08-15 10:42 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-08-14 17:51:29 PDT
Created attachment 158462 [details] Need to run tests
Adam Barth
Comment 2 2012-08-15 10:42:36 PDT
Adam Barth
Comment 3 2012-08-15 10:43:04 PDT
Seems to work just like the comment said.
Sam Weinig
Comment 4 2012-08-15 10:56:59 PDT
Comment on attachment 158591 [details] Patch Hawt.
WebKit Review Bot
Comment 5 2012-08-15 11:44:18 PDT
Comment on attachment 158591 [details] Patch Clearing flags on attachment: 158591 Committed r125688: <http://trac.webkit.org/changeset/125688>
WebKit Review Bot
Comment 6 2012-08-15 11:44:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.